--- a/lab1/khanacademy/CSS selectors/descendants.html
+++ b/lab1/khanacademy/CSS selectors/descendants.html
@@ -9,6 +9,7 @@
             }
             .emperor {
                 font-family: cursive;
+                color:white;
             }
             
             .reign {
