--- a/lab2/instagram/instagram.html
+++ b/lab2/instagram/instagram.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="iphone">
-        <img src="iphone.jpg" alt="iphone in insta" width="380px" height="600px">
+        <img src="phone.png" alt="iphoneimg" width="380px" height="600px">
     </div>
     <div class="reg-form">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1280px-Instagram_logo.svg.png"  class="insta-icon"alt="" width="180px" height="60px">
