--- a/lab3/TO-DO List /index.html
+++ b/lab3/TO-DO List /index.html
@@ -1,52 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ToDo List</title>
-
-	<link rel="stylesheet" href="style.css" />
+  <title>To-Do List</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"/>
 </head>
 <body>
-	
-	<header>
-		<h1>TO DO List</h1>
-		<form id="new-task-form">
-			<input 
-				type="text" 
-				name="new-task-input" 
-				id="new-task-input" 
-				placeholder="New Task" />
-			<input 
-				type="submit"
-				id="new-task-submit" 
-				value="Add task" />
-		</form>
-	</header>
-	<main>
-		<section class="task-list">
-			<h2>Tasks</h2>
-
-			<div id="tasks">
-
-				<!-- <div class="task">
-					<div class="content">
-						<input 
-							type="text" 
-							class="text" 
-							value="A new task"
-							readonly>
-					</div>
-					<div class="actions">
-						<button class="edit">Edit</button>
-						<button class="delete">Delete</button>
-					</div>
-				</div> -->
-
+	<div class="container">
+		<h1>To-Do List</h1>
+    	<form id="todo-form">
+      		<input type="text" placeholder="New Task" id="todo-input">
+      		<button type="submit" id="add-btn">Add</button>
+    	</form>
+		<!-- <div class="item">
+			<div class="item-button">
+				<i class="fa-regular fa-square-check"></i>
 			</div>
-		</section>
-	</main>
+			
+			<div class="item-button"> 
+				<i class="fa-regular fa-xmark"></i>
+			</div>
+		</div> -->
+		<ul id="todo-list"></ul>
+  	</div>
 
 	<script src="action.js"></script>
 </body>
