--- a/lab3/TO-DO List /index.html
+++ b/lab3/TO-DO List /index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <title>To-Do List</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"/>
+  <link rel="stylesheet" href="">
 </head>
 <body>
 	<div class="container">
